# droidbattles

./: .clang-tidy  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  battlebots.kdevprj  configs.qrc  configure  configure.in  doc.qrc  droidbattles.dsw  droidbattles.kdevprj  droidbattles.kdevses  droidbattles.lsm  droidbattles.pro  images.qrc  installation  mkinstalldirs  singlebattle.save  subdirs  survbattle.save  tracker.basm  tracker.bot
admin/: am_edit
battlebots/: armor.h  backbutton.xpm  battlearea.h  battlebots.conf  battlebots.cpp  battlebots.xpm  beam.cpp  beamer.cpp  beamer.h  botinfo.h  chaff.h  chafflauncher.cpp  chiller.cpp  chiller.h  cloaker.cpp  commonsymbols.h  confedit.cpp  confedit.h  debugcontents.h  devchoice.cpp  device.cpp  docbrowser.cpp  example1.basm  explosion.cpp  explosion.h  fuel.cpp  infobox.h  instruktion.cpp  kothtournament.h  main.cpp  mine.cpp  mine.h  minelayer.cpp  minelayer.h  pixmapholder.cpp  pixmapholder.h  plasma.cpp  plasma.h  radarmissile.cpp  radarmissile.h  (+19 more)
battlebots/docs/en/: Makefile.in  index-1.html  index-11.html  index-12.html  index-3.html  index-5.html  index-8.html  index-9.html
doc/: index-1.html  index-10.html  index-2.html  index-3.html  index-5.html  index.html
droidbattles/: BUGS  Makefile.am  Makefile.in  armor.cpp  armor.h  battlearea.cpp  battlearea.h  battlearea.moc.cpp  beam.cpp  beam.h  beamer.cpp  beamer.h  botinfo.cpp  botinfo.h  botinfo.moc.cpp  chaff.cpp  chaff.h  chafflauncher.cpp  chafflauncher.h  cloaker.cpp  cloaker.h  commonsymbols.h  communication.cpp  communication.h  confedit.h  confedit.moc.cpp  confstruct.h  cpu.cpp  cpu.h  createbot.cpp  createbot.h  current.cfg  debugcontents.h  debugwindow.cpp  debugwindow.h  debugwindow.moc.cpp  devchoice.cpp  devchoice.h  device.cpp  device.h  (+78 more)
droidbattles/docs/: Makefile.in
droidbattles/docs/en/: Makefile.am  Makefile.in  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-2.html  index-4.html  index-6.html  index-7.html  index-8.html  index-9.html  index.html  index.sgml
gfx/: mine.xpm
images/: missile.xpm  rocket.xpm
misc/: current.cfg  droidbattles.conf  heavy.cfg  teamtracker.basm
src/: armor.cpp  armor.h  battlearea.cpp  battlearea.h  battleconfig.h  beam.cpp  beam.h  beamer.cpp  beamer.h  botinfo.cpp  botinfo.h  chaff.cpp  chaff.h  chafflauncher.cpp  chafflauncher.h  chiller.cpp  chiller.h  cloaker.cpp  cloaker.h  commonsymbols.h  communication.cpp  communication.h  confedit.cpp  confedit.h  confstruct.cpp  confstruct.h  cpu.cpp  cpu.h  createbot.cpp  createbot.h  createbot.moc.cpp  debugcontents.h  debugwindow.cpp  debugwindow.h  devchoice.cpp  devchoice.h  devchoice.moc.cpp  device.cpp  device.h  docbrowser.cpp  (+91 more)
