####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index-10.html index-11.html index-12.html index-13.html index-14.html index-7.html index-8.html index-9.html 

install-data-local:
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index.html /usr/local/droidbattles/doc/index.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-1.html /usr/local/droidbattles/doc/index-1.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-2.html /usr/local/droidbattles/doc/index-2.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-3.html /usr/local/droidbattles/doc/index-3.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-4.html /usr/local/droidbattles/doc/index-4.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-5.html /usr/local/droidbattles/doc/index-5.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-6.html /usr/local/droidbattles/doc/index-6.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-10.html /usr/local/droidbattles/doc/index-10.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-11.html /usr/local/droidbattles/doc/index-11.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-12.html /usr/local/droidbattles/doc/index-12.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-13.html /usr/local/droidbattles/doc/index-13.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-14.html /usr/local/droidbattles/doc/index-14.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-7.html /usr/local/droidbattles/doc/index-7.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-8.html /usr/local/droidbattles/doc/index-8.html
	$(mkinstalldirs) /usr/local/droidbattles/doc/
	$(INSTALL_DATA) index-9.html /usr/local/droidbattles/doc/index-9.html

uninstall-local:
	-rm -f /usr/local/droidbattles/doc/index.html
	-rm -f /usr/local/droidbattles/doc/index-1.html
	-rm -f /usr/local/droidbattles/doc/index-2.html
	-rm -f /usr/local/droidbattles/doc/index-3.html
	-rm -f /usr/local/droidbattles/doc/index-4.html
	-rm -f /usr/local/droidbattles/doc/index-5.html
	-rm -f /usr/local/droidbattles/doc/index-6.html
	-rm -f /usr/local/droidbattles/doc/index-10.html
	-rm -f /usr/local/droidbattles/doc/index-11.html
	-rm -f /usr/local/droidbattles/doc/index-12.html
	-rm -f /usr/local/droidbattles/doc/index-13.html
	-rm -f /usr/local/droidbattles/doc/index-14.html
	-rm -f /usr/local/droidbattles/doc/index-7.html
	-rm -f /usr/local/droidbattles/doc/index-8.html
	-rm -f /usr/local/droidbattles/doc/index-9.html

####### kdevelop will overwrite this part!!! (end)############
